gobmkida/c2/compute_escape_influence
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2023:24: error: use of undeclared identifier 'byte_9B389F'
v8 = ( unsigned __int8)byte_9B389F[v6]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2024:6: error: use of undeclared identifier 'dword_A19DEC'
if ( dword_A19DEC[v6] != v8 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2026:1: error: use of undeclared identifier 'dword_A19DEC'
dword_A19DEC[v6] = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2040:13: error: use of undeclared identifier 'compute_escape_influence_active_caches'
*( _QWORD *)compute_escape_influence_active_caches = 0LL; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2043:6: error: use of undeclared identifier 'compute_escape_influence_active_caches'
if ( compute_escape_influence_active_caches[v9] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2047:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[i * 2] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2048:41: error: use of undeclared identifier 'compute_escape_influence_cached_board'
escape_value[i * 2 - 1] = *( ( _BYTE *)&compute_escape_influence_cached_board[i + 399] + v9 + 2); 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2052:23: error: use of undeclared identifier 'compute_escape_influence_escape_values'
escape_value[i * 2] = compute_escape_influence_escape_values[1 * i + v9]; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2107:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[j] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2112:1: error: use of undeclared identifier 'compute_escape_influence_escape_values'
compute_escape_influence_escape_values[2 * j + v10] = escape_value[j]; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/engine/influence.c:2114:1: error: use of undeclared identifier 'compute_escape_influence_active_caches'
compute_escape_influence_active_caches[v10] = 1; 
^
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_escape_influence/src/obj/1/influence.o] Error 1
